# Raid-Sim

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  InternalNotes.md  README.md  vcpkg.json
.claude/: settings.local.json
notes/: boss_archetypes.md  checklist.md  classes.md  combat.md  firstboss_mvp.md  healing.md  raid_sim.md  simplified_combat.md  stats.md
notes/archive_notes/: GameProgression.md  MVP.md  Raid Roster.md  boss_archetypes.md  combat.md  loot.md  scaling.md
src/: CMakeLists.txt  enum.h  main.cpp
src/Raid/: AttemptResult.h  Boss.cpp  Boss.h  BossMechanic.h  Raid.cpp  Raid.h  RaidEntry.h  RaidTypes.h
src/characters/: Ability.h  CharacterClass.h  Guild.h  Items.h  PlayerStructTypes.h  Resource.h  Spec.cpp  Spec.h  Stats.h  Talents.h  character.h  player.cpp  player.h
src/core/: ResourceTypes.h  gamestate.cpp  gamestate.h
src/data/: bosses.json  dataload.h  loader.cpp  loader.h  players.json  seeder.cpp  seeder.h  specs.json  spells.json
src/db/: database.cpp  database.h
src/sim/: RaidEntry.h  SimTypes.h  fight.cpp  fight.h
src/ui/: main_window.cpp  main_window.h
test/: CMakeLists.txt  test_fight.cpp
tools/RaidSimTools/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  RaidSimTools.csproj
tools/RaidSimTools/Models/: Boss.cs  Player.cs  Spec.cs  Spell.cs
tools/RaidSimTools/Services/: JsonDataService.cs
